# backend

./: .env.example  .gitignore  ARCHITECTURE_FLOW.md  ONBOARDING.md  README.md  pyproject.toml  pytest.ini  requirements.txt  test_script.py  vercel.json
core/: __init__.py  asgi.py  mail.py  model.py  urls.py
core/utils/: error_handler.py  helper.py  paystack.py  pdf.py
inventory/: admin.py  models.py  tests.py  urls.py
inventory/migrations/: 0001_initial.py  0002_initial.py  0003_remove_inventory_organization.py  0004_inventory_blood_bank.py  0005_donation.py  0006_donation_donor_age_donation_donor_gender.py  0007_remove_product_price_inventory_price.py  0008_bloodtype_alter_inventory_product_and_more.py  0009_donation_genotype_donation_hemoglobin_level.py  0010_bloodtype_created_by_donation_created_by_and_more.py
inventory/serializers/: inventory_serializers.py
inventory/views/: inventory_views.py
notification/: admin.py  models.py  urls.py
notification/migrations/: 0001_initial.py  0002_initial.py  0003_notification_created_by.py
notification/views/: notification_views.py
payment/: admin.py  models.py  urls.py
payment/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_payment_blood_bank_fee_payment_commission_percentage_and_more.py  0005_bankdetail_payout.py  0006_payment_created_by_payout_created_by_and_more.py
payment/serializers/: bank_serializers.py  payout_serializers.py
payment/views/: bank_views.py  payment_views.py
scratch/: test_error_handler.py  test_login_view.py
templates/emails/: forgot_password.html  new_user.html  onboarding.html  password_changed.html  receipt_notification.html  verification_email.html
templates/receipts/: receipt.html
tests/: smoke_test_emails.py  test_mail.py
transaction/: admin.py  models.py  tests.py  urls.py
transaction/migrations/: 0001_initial.py  0002_initial.py  0003_bloodrequest_blood_price_bloodrequest_delivery_fee_and_more.py  0004_remove_bloodrequest_bloodbank_and_more.py  0005_bloodrequest_blood_bank_and_more.py  0006_bloodrequest_hospital_location_and_more.py  0007_bloodrequest_commission_amount.py  0008_bloodrequest_batch_id.py  0009_bloodrequest_created_by.py  (+1 more)
users/: admin.py  models.py  permissions.py
users/tests/: test_models.py  (+4 more)
(+41 files in other folders)
