[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "arabic-reshaper==3.0.1",
    "asgiref==3.11.1",
    "asn1crypto==1.5.1",
    "attrs==26.1.0",
    "autobahn==25.12.2",
    "automat==25.4.16",
    "cbor2==6.0.1",
    "certifi==2026.4.22",
    "cffi==2.0.0",
    "channels==4.3.2",
    "charset-normalizer==3.4.7",
    "cloudinary==1.44.2",
    "constantly==23.10.4",
    "cryptography>=46.0.0",
    "cssselect2==0.9.0",
    "daphne==4.2.1",
    "dj-database-url==3.1.2",
    "django==6.0.4",
    "django-cloudinary-storage==0.3.0",
    "django-cors-headers==4.9.0",
    "django-extensions==4.1",
    "django-filter==25.2",
    "django-split-settings==1.3.2",
    "djangorestframework==3.17.1",
    "djangorestframework-simplejwt==5.5.1",
    "drf-spectacular==0.29.0",
    "drf-spectacular-sidecar==2026.4.14",
    "freetype-py==2.5.1",
    "html5lib==1.1",
    "hyperlink==21.0.0",
    "idna==3.13",
    "incremental==24.11.0",
    "inflection==0.5.1",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "loguru==0.7.3",
    "lxml==6.1.0",
    "msgpack==1.1.2",
    "oscrypto==1.3.0",
    "packaging==26.2",
    "pillow==12.2.0",
    "psycopg2-binary==2.9.12",
    "py-ubjson==0.16.1",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pyhanko>=0.30.0",
    "pyhanko-certvalidator>=0.30.0",
    "pyjwt==2.12.1",
    "pyopenssl>=24.0.0",
    "pypdf==6.10.2",
    "python-bidi==0.6.9",
    "python-decouple==3.8",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "reportlab==4.5.0",
    "requests==2.33.1",
    "rpds-py==0.30.0",
    "sentry-sdk==2.58.0",
    "service-identity==24.2.0",
    "six==1.17.0",
    "sqlparse==0.5.5",
    "tinycss2==1.5.1",
    "twisted==25.5.0",
    "txaio==25.12.2",
    "typing-extensions==4.15.0",
    "tzlocal==5.3.1",
    "ujson==5.12.0",
    "uritemplate==4.2.0",
    "uritools==6.1.0",
    "urllib3==2.6.3",
    "webencodings==0.5.1",
    "whitenoise==6.12.0",
    "xhtml2pdf==0.2.17",
    "zope-interface==8.4",
]

[tool.uv]
exclude-dependencies = [
    "rlpycairo",
    "pycairo",
]

